--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"gulp-file-include": "^2.3.0",
 		"gulp-fonter": "^0.3.0",
 		"gulp-group-css-media-queries": "^1.2.2",
+		"gulp-if": "^3.0.0",
 		"gulp-imagemin": "^8.0.0",
 		"gulp-newer": "^1.4.0",
 		"gulp-notify": "^4.0.0",
