--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "gulp",
+		"build": "gulp build --build",
+		"zip": "gulp deployZIP --build",
 		"svgSprive": "gulp svgSprive"
 	},
 	"author": "",
@@ -34,6 +36,7 @@
 		"gulp-webp": "^4.0.1",
 		"gulp-webp-html-nosvg": "^1.0.6",
 		"gulp-webpcss": "^1.1.1",
+		"gulp-zip": "^5.1.0",
 		"sass": "^1.50.0",
 		"swiper": "^8.1.0",
 		"webp-converter": "^2.2.3",
