--- a/package.json
+++ b/package.json
@@ -8,39 +8,42 @@
 		"dev": "gulp",
 		"build": "gulp build --build",
 		"zip": "gulp deployZIP --build",
+		"deploy": "gulp deployFTP --build",
 		"svgSprive": "gulp svgSprive"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"browser-sync": "^2.27.9",
-		"del": "^6.0.0",
-		"gulp": "^4.0.2",
-		"gulp-autoprefixer": "^8.0.0",
-		"gulp-clean-css": "^4.3.0",
-		"gulp-file-include": "^2.3.0",
-		"gulp-fonter": "^0.3.0",
-		"gulp-group-css-media-queries": "^1.2.2",
-		"gulp-if": "^3.0.0",
-		"gulp-imagemin": "^8.0.0",
-		"gulp-newer": "^1.4.0",
-		"gulp-notify": "^4.0.0",
-		"gulp-plumber": "^1.2.1",
-		"gulp-pug": "^5.0.0",
-		"gulp-rename": "^2.0.0",
-		"gulp-replace": "^1.1.3",
-		"gulp-sass": "^5.1.0",
-		"gulp-svg-sprite": "^1.5.0",
-		"gulp-ttf2woff2": "^4.0.1",
-		"gulp-version-number": "^0.2.4",
-		"gulp-webp": "^4.0.1",
-		"gulp-webp-html-nosvg": "^1.0.6",
-		"gulp-webpcss": "^1.1.1",
-		"gulp-zip": "^5.1.0",
-		"sass": "^1.50.0",
-		"swiper": "^8.1.0",
-		"webp-converter": "^2.2.3",
-		"webpack": "^5.72.0",
-		"webpack-stream": "^7.0.0"
+		"browser-sync": "latest",
+		"del": "latest",
+		"gulp": "latest",
+		"gulp-autoprefixer": "latest",
+		"gulp-clean-css": "latest",
+		"gulp-file-include": "latest",
+		"gulp-fonter": "latest",
+		"gulp-group-css-media-queries": "latest",
+		"gulp-if": "latest",
+		"gulp-imagemin": "latest",
+		"gulp-newer": "latest",
+		"gulp-notify": "latest",
+		"gulp-plumber": "latest",
+		"gulp-pug": "latest",
+		"gulp-rename": "latest",
+		"gulp-replace": "latest",
+		"gulp-sass": "latest",
+		"gulp-svg-sprite": "latest",
+		"gulp-ttf2woff2": "latest",
+		"gulp-util": "latest",
+		"gulp-version-number": "latest",
+		"gulp-webp": "latest",
+		"gulp-webp-html-nosvg": "latest",
+		"gulp-webpcss": "latest",
+		"gulp-zip": "latest",
+		"sass": "latest",
+		"swiper": "latest",
+		"vinyl-ftp": "latest",
+		"webp-converter": "2.2.3",
+		"webpack": "latest",
+		"webpack-stream": "latest"
 	}
 }
